--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Engine\Engine.csproj" />
+    <ProjectReference Include="..\Textrude\Textrude.csproj" />
   </ItemGroup>
 
 </Project>
