Improve exportasInvocation and allow cli tool to load args from json/yaml

--- a/Textrude/Properties/launchSettings.json
+++ b/Textrude/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Textrude": {
       "commandName": "Project",
-      "commandLineArgs": "info"
+      "commandLineArgs": " renderFromFile  --arguments \"args.json\""
     }
   }
 }
