Disable GitVersion in CI workflow
* Branch master does not exist anymore -> conflcit with GitVersion defaults

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,8 @@ on: [push, pull_request]
 
 jobs:
   build:
+    env:
+      DisableGitVersionTask: true
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
