--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Clean
-      run: dotnet clean && dotnet nuget locals all --clear
+      run: dotnet clean -p:Configuration=${{ matrix.build_config }} && dotnet nuget locals all --clear
     - name: Restore dependencies
       run: dotnet restore -p:Configuration=${{ matrix.build_config }}
     - name: Build
