Moves the scriptlibrary to a shared project so it can be more easily copied to output folder when under debug

--- a/SharedApplication/SharedApplication.csproj
+++ b/SharedApplication/SharedApplication.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="YamlDotNet" Version="9.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ScriptLibrary\ScriptLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
