--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,5 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-    - name: Restore tools
-      run: dotnet tool restore
     - name: Test
-      run: dotnet cake --target Test --configuration ${{ matrix.build_config }} --clean
+      run: ./build --target Test --configuration ${{ matrix.build_config }} --clean
