Call dotnet run directly in CI workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,4 +21,4 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Test
-      run: ./build --target Test --configuration ${{ matrix.build_config }} --clean
+      run: dotnet run --project build/Build.csproj -- --target Test --configuration ${{ matrix.build_config }} --clean
