--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,11 +22,16 @@ jobs:
         dotnet-version: 5.0.x
     - name: Test
       run: dotnet run --project build/Build.csproj -- --target Test --configuration ${{ matrix.build_config }} --clean
-  pacakge:
+  package:
     env:
       DisableGitVersionTask: true
     runs-on: windows-latest
     steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.x
     - name: Package
       run: dotnet run --project build/Build.csproj -- --target Package
     - uses: actions/upload-artifact@v2
