--- a/Textrude/Textrude.csproj
+++ b/Textrude/Textrude.csproj
@@ -7,12 +7,8 @@
 
   <PropertyGroup>
     <DefineConstants Condition="'$(DisableGitVersionTask)' != true">HASGITVERSION</DefineConstants>
-    <ApplicationIcon>D:\Repos\Textrude\img\textrude_app.ico</ApplicationIcon>
+    <ApplicationIcon>app.ico</ApplicationIcon>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Content Include="..\img\textrude_app.ico" Link="textrude_app.ico" />
-  </ItemGroup>
  
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
