--- a/Textrude/Textrude.csproj
+++ b/Textrude/Textrude.csproj
@@ -7,6 +7,7 @@
 
   <PropertyGroup>
     <DefineConstants Condition="'$(DisableGitVersionTask)' != true">HASGITVERSION</DefineConstants>
+    <ApplicationIcon>app.ico</ApplicationIcon>
   </PropertyGroup>
  
   <ItemGroup>
