--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Test
-      run: dotnet run --project build/Build.csproj -- --target Test --configuration ${{ matrix.build_config }} --clean
+      run: dotnet run --project build/Build.csproj -- --target Test --configuration ${{ matrix.build_config }} --clean -v Diagnostic
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
