--- a/src/Textrude/Textrude.csproj
+++ b/src/Textrude/Textrude.csproj
@@ -3,14 +3,25 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup>
     <ApplicationIcon>app.ico</ApplicationIcon>
+
+    <PackageId>Textrude.Tool</PackageId>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>textrude</ToolCommandName>
+    <PackageIcon>app.png</PackageIcon>
   </PropertyGroup>
  
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="..\VersionInfo.cs" />
+    <None Include="app.png" Pack="true" PackagePath="/" />
   </ItemGroup>
 
   <ItemGroup>
