--- a/SharedApplication/SharedApplication.csproj
+++ b/SharedApplication/SharedApplication.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Engine\Engine.csproj" />
     <ProjectReference Include="..\ScriptLibrary\ScriptLibrary.csproj" />
   </ItemGroup>
 
