Support prototype script libraries

--- a/ScriptLibrary/ScriptLibrary.csproj
+++ b/ScriptLibrary/ScriptLibrary.csproj
@@ -9,6 +9,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="lib\cpp.sbn">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="lib\csharp.sbn">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="lib\line.sbn">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="lib\misc.sbn">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
