Add nuget target to Cake build

--- a/.gitignore
+++ b/.gitignore
@@ -180,8 +180,11 @@ DocProject/Help/*.hhp
 DocProject/Help/Html2
 DocProject/Help/html
 
-# Click-Once directory
+# Publish folder
 publish/
+# Nuget folder
+nuget/
+
 
 # Publish Web Output
 *.[Pp]ublish.xml
