--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -17,10 +17,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+
+    <PackageReference Include="TimeZoneConverter" Version="3.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Engine\Engine.csproj" />
+    <ProjectReference Include="..\Query\Query.csproj" />
     <ProjectReference Include="..\Textrude\Textrude.csproj" />
   </ItemGroup>
 
