--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Nullable>enable</Nullable>
     <TargetFramework>net6.0</TargetFramework>
     <PackageId>textrude.engine</PackageId>
     <Description>The engine for Textrude</Description>
