Change to AwesomeAssertions

--- a/ScriptLibrary/ScriptLibrary.csproj
+++ b/ScriptLibrary/ScriptLibrary.csproj
@@ -9,6 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AwesomeAssertions" Version="9.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="lib\cpp.sbn">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
