--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -18,6 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AwesomeAssertions" Version="9.1.0" />
     <PackageReference Include="CsvHelper" Version="33.1.0" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.Recognizers.Text" Version="1.8.13" />
