--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -8,8 +8,9 @@
 
   <ItemGroup>
 
+    <PackageReference Include="AwesomeAssertions" Version="9.1.0" />
+
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-    <PackageReference Include="FluentAssertions" Version="8.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.9.3" />
     <PackageReference Include="MSTest.TestFramework" Version="3.9.3" />
 
