--- a/Textrude/Textrude.csproj
+++ b/Textrude/Textrude.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
  
   <ItemGroup>
+    <PackageReference Include="AwesomeAssertions" Version="9.1.0" />
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="GitVersionTask" Version="5.5.1">
       <PrivateAssets>all</PrivateAssets>
