update to net9  (#442)
* update depdencies

* Update all projects and scripts to net9

* Fix up

* Change to AwesomeAssertions

* workaround broken ubuntu

* make build use net9

* Fix up cd

* back to latest ubuntu

* Bump reportgenerator

* try again

* give up on reports

* aaaasdfasd

* asdfasdf

* asdf

--- a/ScriptLibrary/ScriptLibrary.csproj
+++ b/ScriptLibrary/ScriptLibrary.csproj
@@ -1,11 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="lib\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AwesomeAssertions" Version="9.1.0" />
   </ItemGroup>
 
   <ItemGroup>
